2006-03-22  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* traverse.tcl: Bug fixes. Added the missing declaration of the
	  dev/inode cache, and moved the restoration of the old working
	  directory in the 8.3 glob -directory emulation to their proper
	  place.

	* traverse.tcl: New file. Object based directory traversal,
	* pkgIndex.tcl: incremental at the core, i.e. can be event-
	  driven. Iterative algorithm, no trouble with deep directory
	  structures anymore. Not documented yet, no testsuite yet.

2006-03-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* fileutil.test: Removed some hardcoded paths into my
	  system. Thanks to Michael Schlenker for catching this.

2006-03-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* fileutil.tcl:  Extended the tempdir command to allow the user 
	* fileutil.man:  to set a directory to use, exclusively. Updated
	* fileutil.test: both documentation and testsuite.

	* fileutil.tcl:  Added a 'test' command for the quick testing of
	* fileutil.man:  several properties of a given path. Extended
	* fileutil.test: both documentation and testsuite.

2006-02-09  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* fileutil.man: Updated the documentation to cover all the new
	  commands.

	* fileutil.test: Extended testsuite to cover the command
	  'updateInPlace'.

	* fileutil.tcl: Fixed bug in implementation of 'updateInPlace', we
	  wrote the unchanged input back instead of the transformation
	  result.

2006-02-08  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* fileutil.test: Extended the testsuite to cover the commands
	  'appendToFile', 'insertIntoFile', 'removeFromFile', and
	  'replaceInFile'.

	* fileutil.tcl: Added argument validation to the commands
	  'appendToFile', 'insertIntoFile', 'removeFromFile', and
	  'replaceInFile'. Modified their implementation to use shorter
	  implementations for the degenerate cases.
